# etude-mlir

clang-tools-extra/clangd/clients/clangd-vscode/: package-lock.json  package.json
mlir/examples/pyir/: CMakeLists.txt  README.md
mlir/examples/pyir/include/: CMakeLists.txt
mlir/examples/pyir/include/Pyir/: CMakeLists.txt  PyirDialect.h  PyirDialect.td  PyirOps.h  PyirOps.td
mlir/examples/pyir/lib/Pyir/: CMakeLists.txt  PyirDialect.cpp  PyirOps.cpp
mlir/examples/pyir/pyir-opt/: CMakeLists.txt  pyir-opt.cpp
mlir/examples/pyir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/examples/pyir/test/Pyir/: dummy.mlir  extend.mlir  lower_me.mlir
